Fix border being too large

--- a/src/components/WhatsOn/src/WhatsOn.scss
+++ b/src/components/WhatsOn/src/WhatsOn.scss
@@ -75,6 +75,12 @@
 				transform: scale(1, 1);
 				opacity: 1;
 			}
+
+			div[tabindex="-1"]:focus {
+				outline: none;
+				border: 1px solid white;
+				border-radius: 3px;
+			}
 		}
 	}
 }
